# icp-pay

./: LICENSE  README.md
canisters/: .gitignore  Cargo.toml  README.md  canister_ids.json  deploycanisters.sh  dfx.json  mops.toml  package.json
canisters/scripts/: deploy_ledger.sh
canisters/src/SPlitPayment_backend/: main.mo  utils.mo
canisters/src/SPlitPayment_backend/Types/: Types.mo  icpIndex.types.mo  icpledger.types.mo  icrcIndex.types.mo  icrcledger.types.mo
canisters/src/SPlitPayment_frontend/: package.json
canisters/src/SPlitPayment_frontend/src/: App.jsx
canisters/src/icp_payment_backend/: Cargo.toml  icp_payment_backend.did
canisters/src/icp_payment_backend/src/: error.rs  lib.rs
docs/: FrontendFeedbacks.md  feedback.md
