[package]
name = "icp_payment_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.12.0"
icrc-ledger-types = "0.1.6"
serde = "1.0.204"
serde_derive = "1.0.204"
